--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "nuxt generate",
     "lint:prettier": "prettier --check .",
     "lint": "npm run lint:prettier",
-    "lintfix": "prettier --write --list-different ."
+    "lintfix": "prettier --write --list-different .",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.25.3",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.5.0",
+    "gh-pages": "^6.0.0",
     "prettier": "^2.7.1"
   }
 }
